// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-6 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-6 {
    display: none;
  }
}

.emotion-0 {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  text-align: left;
}

.emotion-1 {
  display: inline-block;
  width: 270px;
}

.emotion-4 {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
}

.emotion-5 {
  display: table-cell;
  vertical-align: middle;
  text-align: left;
}

<div
    class="emotion-6"
  >
    <span
      class="emotion-0"
    >
      ←  
    </span>
    <a
      class="emotion-2"
      href="/drivers/csharp/"
      title="Previous Section"
    >
      <span
        class="emotion-1"
      >
        MongoDB C#/.NET Driver
      </span>
    </a>
    <a
      class="emotion-4"
      href="/drivers/java/"
      title="Next Section"
    >
      <span
        class="emotion-1"
      >
        Java MongoDB Driver
      </span>
    </a>
    <span
      class="emotion-5"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-3 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-3 {
    display: none;
  }
}

.emotion-0 {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  text-align: left;
}

.emotion-1 {
  display: inline-block;
  width: 270px;
}

<div
    class="emotion-3"
  >
    <span
      class="emotion-0"
    >
      ←  
    </span>
    <a
      class="emotion-2"
      href="/drivers/go/"
      title="Previous Section"
    >
      <span
        class="emotion-1"
      >
        MongoDB Go Driver
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-3 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-3 {
    display: none;
  }
}

.emotion-0 {
  display: inline-block;
  width: 270px;
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  text-align: left;
}

<div
    class="emotion-3"
  >
    <a
      class="emotion-1"
      href="/drivers/go/"
      title="Next Section"
    >
      <span
        class="emotion-0"
      >
        MongoDB Go Driver
      </span>
    </a>
    <span
      class="emotion-2"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;
